--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,8 +20,8 @@ html
       | TC名簿管理システム
     = csrf_meta_tags
     /= stylesheet_link_tag    'https://fonts.googleapis.com/icon?family=Material+Icons'
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': TRUE
-    = javascript_include_tag 'application', 'data-turbolinks-track': TRUE
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .container
       h1 TopConnect名簿管理システム
