--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -4,7 +4,7 @@ p#notice
 = link_to 'データ編集', edit_event_path(@event), class: 'btn btn-default', role: 'button'
 = link_to '一覧に戻る', events_path, class: 'btn btn-default', role: 'button'
 | 　
-= link_to "CSV", event_path(@event, format: :csv, search: :q), class: "btn btn-default", role: 'button'
+= link_to "CSV出力", event_path(@event, format: :csv, search: :q), class: "btn btn-default", role: 'button'
 br
 br
 ul.nav.nav-tabs
@@ -12,7 +12,7 @@ ul.nav.nav-tabs
     = link_to 'すべて', event_path(params[:id])
   li.nav-item
     = link_to '出席', event_path(params[:id], q: 'presentee')
-  li.nav-itemv
+  li.nav-item
     = link_to '欠席', event_path(params[:id], q: 'absentee')
 h2 イベントデータ詳細
 .col-lg-6
