--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -29,8 +29,8 @@
         th.col-12.col-md-3 役職
         th.col-12.col-md-3 出欠
     tbody
-      = form.fields_for :activities do |ac|
-        = render 'activities_fields', f: ac
+      = form.fields_for :activities do |cac|
+        = render 'customer_activities_fields', f: cac
   h3 参加者
   table.table.table-bordered.table-sm
     thead.thread-light
@@ -40,8 +40,8 @@
         th.col-12.col-md-3 役職
         th.col-12.col-md-3 出欠
     tbody
-      = form.fields_for :event_details do |ed|
-        = render 'event_details_fields', f: ed
+      = form.fields_for :activities do |aac|
+        = render 'advisor_activities_fields', f: aac
   .field.row
     = form.hidden_field :editor_code, value: current_admin.id
   .actions.row
