--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -16,8 +16,11 @@ table.table.table-bordered.table-sm
       tr
         td
           = link_to '詳細', event_path(e), class: 'btn btn-default btn-sm', role: 'button'
-          = link_to '編集', edit_event_path(e), class: 'btn btn-default btn-sm', role: 'button'
+          - unless e.is_fixed == true
+            = link_to '編集', edit_event_path(e), class: 'btn btn-default btn-sm', role: 'button'
           = link_to '削除', event_path(e), method: :delete, data: { confirm: '削除してもよろしいですか？' }, class: 'btn btn-default btn-sm', role: 'button'
+          - if e.is_fixed == true
+            | 　確定済
         td = e.name
         td = e.event_date.strftime("%Y年%m月%d日")
         td = Admin.find(e.editor_code).name
