--- a/app/views/events/_customer_activities_fields.html.slim
+++ b/app/views/events/_customer_activities_fields.html.slim
@@ -1,11 +1,11 @@
-- if f.object.customer.is_disable == false
-  tr.member_list
-    td = f.object.customer.name
-    td = f.object.customer.company_short_name
-    td = f.object.customer.position
+tr.member_list
+  - if f.object.person&.role_type == 1
+    td = f.object.person.name
+    td = f.object.person.company_short_name
+    td = f.object.person.position
     td.row
       .field
-        = f.hidden_field :customer_id
+        = f.hidden_field :person_id
       .field
         = f.hidden_field :event_id
       .field
