--- a/app/views/people/customer_show.html.slim
+++ b/app/views/people/customer_show.html.slim
@@ -33,6 +33,11 @@
         = @customer.company_short_name
     .row
       strong.col-12.col-md-5
+        | 会社（カナ）:
+      .col-12.col-md-7
+        = @customer.company_kana
+    .row
+      strong.col-12.col-md-5
         | 役職:
       .col-12.col-md-7
         = @customer.position
